fix: main gap

--- a/src/pages/SignPage/SignPage.scss
+++ b/src/pages/SignPage/SignPage.scss
@@ -32,7 +32,7 @@
 
   &__wrapper {
     display: flex;
-    gap: 2.5rem;
+    gap: 3rem;
     align-items: center;
     padding: 56px;
 
